--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 }
 
 body {
-  background-color: darkslategray;
-  color:antiquewhite;
+  background-color:#192734;
+  color:lightgray;
 }
 
 main {
@@ -26,7 +26,7 @@ form input {
   width: 100%;
   background-color: transparent;
   color: #ddd;
-  border: 2px solid black;
+  border: 2px solid gray;
   padding: 2px 5px;
   border-radius: 5px;
 }
@@ -39,4 +39,53 @@ form div.basic {
   display: flex;
   gap: 5px;
   margin-bottom: 5px;
+}
+
+form button {
+  margin-top: 5px;
+  width: 100%;
+  border: 0;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+div.transactions {
+  margin-top: 10px;
+}
+
+div.transaction:first-child {
+  border-top: 0;
+}
+
+div.transaction {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0;
+  border-top: 1px solid gray;
+}
+
+div.transaction div.name {
+  font-size: 1.1rem;
+}
+
+div.transaction div.description {
+  font-size: 0.8rem;
+  color: #888;
+}
+
+div.right {
+  text-align: right;
+}
+
+div.price.green {
+  color: lightgreen
+}
+
+div.price.red {
+  color: red
+}
+
+div.transaction div.datetime {
+  font-size: 0.8rem;
+  color: #888;
 }
